--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,18 @@
 
         </activity>
 
+        <activity android:name=".Home_00_my_info">
+
+        </activity>
+
+        <activity android:name=".Home_00_my_info_01">
+
+        </activity>
+
+        <activity android:name=".Home_00_my_info_02">
+
+        </activity>
+
         <activity android:name=".Home_02">
 
         </activity>
