--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,10 @@
 
         </activity>
 
+        <activity android:name=".Home_02_01">
+
+        </activity>
+
         <activity android:name=".Home_03">
 
         </activity>
