--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,6 +55,10 @@
 
         </activity>
 
+        <activity android:name=".Home_02_02">
+
+        </activity>
+
         <activity android:name=".Home_03">
 
         </activity>
