--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,102 +19,63 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".Sign_up_01_Activity">
+        <activity android:name=".Sign_up_01_Activity"/>
 
-        </activity>
+        <activity android:name=".Sign_up_02_Activity"/>
 
-        <activity android:name=".Sign_up_02_Activity">
+        <activity android:name=".Sign_in_02_Activity"/>
 
-        </activity>
+        <activity android:name=".Home_01"/>
 
-        <activity android:name=".Sign_in_02_Activity">
+        <activity android:name=".Home_00_my_info"/>
 
-        </activity>
+        <activity android:name=".Home_00_my_info_01"/>
 
-        <activity android:name=".Home_01">
+        <activity android:name=".Home_00_my_info_02"/>
 
-        </activity>
+        <activity android:name=".Home_02"/>
 
-        <activity android:name=".Home_00_my_info">
+        <activity android:name=".Home_02_01"/>
 
-        </activity>
+        <activity android:name=".Home_02_02"/>
 
-        <activity android:name=".Home_00_my_info_01">
+        <activity android:name=".Home_03"/>
 
-        </activity>
+        <activity android:name=".Home_04"/>
 
-        <activity android:name=".Home_00_my_info_02">
+        <activity android:name=".Home_05"/>
 
-        </activity>
+        <activity android:name=".Search_01"/>
 
-        <activity android:name=".Home_02">
-
-        </activity>
-
-        <activity android:name=".Home_02_01">
-
-        </activity>
-
-        <activity android:name=".Home_02_02">
-
-        </activity>
-
-        <activity android:name=".Home_03">
-
-        </activity>
-
-        <activity android:name=".Home_04">
-
-        </activity>
-
-        <activity android:name=".Home_05">
-
-        </activity>
-
-        <activity android:name=".Search_01">
-
-        </activity>
-
-        <activity android:name=".Search_02">
-
-        </activity>
+        <activity android:name=".Search_02"/>
 
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="com.example.dudu.myapplication"
             android:exported="false"
             android:grantUriPermissions="true">
-
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
         </provider>
 
-
     </application>
 
-    //권한 설정
+            <!--//권한 설정-->
 
-    //카메라
-    <uses-permission
-        android:name="android.permission.CAMERA">
-    </uses-permission>
+    <!--//카메라-->
+    <uses-permission android:name="android.permission.CAMERA"/>
 
-    //문자
-    <uses-permission
-        android:name="android.permission.SEND_SMS">
-    </uses-permission>
+    <!--//문자-->
+    <uses-permission android:name="android.permission.SEND_SMS"/>
 
-    //전화
-    <uses-permission
-        android:name="android.permission.CALL_PHONE">
-    </uses-permission>
+    <!--//전화-->
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
 
-    //앨범 접근
-    <uses-permission
-        android:name="android.permission.READ_EXTERNAL_STORAGE">
-    </uses-permission>
-
+    <!--//앨범 접근-->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <uses-feature android:name="android.hardware.camera2" />
 
 </manifest>
