--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,8 @@
 
         <activity android:name=".Home_02_02"/>
 
+        <activity android:name=".Home_02_03"/>
+
         <activity android:name=".Home_03"/>
 
         <activity android:name=".Home_04"/>
