--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,10 +32,13 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     testImplementation 'junit:junit:4.12'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
-    implementation 'com.google.code.gson:gson:2.8.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
 
-    implementation 'com.google.firebase:firebase-auth:16.0.3'
-    implementation 'com.google.android.gms:play-services-auth:16.0.0'
+    implementation 'com.google.firebase:firebase-auth:16.0.5'
+    implementation 'com.google.android.gms:play-services-auth:16.0.1'
+    implementation 'com.google.firebase:firebase-core:16.0.5'
+    implementation 'com.google.firebase:firebase-analytics:16.0.5'
+    implementation 'com.google.firebase:firebase-database:16.0.5'
 
 //    compile 'com.facebook.stetho:stetho:1.5.0'
 //    compile 'com.facebook.stetho:stetho-okhttp3:1.5.0'
