--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,10 +39,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:16.0.5'
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
     implementation 'com.google.firebase:firebase-analytics:16.0.5'
+    implementation 'com.google.firebase:firebase-storage:16.0.5'
 
-//    implementation 'com.facebook.stetho:stetho:1.5.0'
-//    implementation 'com.facebook.stetho:stetho-okhttp3:1.5.0'
-//    implementation 'com.facebook.stetho:stetho-js-rhino:1.5.0'
+    implementation 'com.facebook.stetho:stetho:1.5.0'
+    implementation 'com.facebook.stetho:stetho-okhttp3:1.5.0'
+    implementation 'com.facebook.stetho:stetho-js-rhino:1.5.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
