--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,8 @@
 
         <activity android:name=".Home_04_FriendList"/>
 
+        <activity android:name=".Home_04_Chatting"/>
+
         <activity android:name=".Home_05"/>
 
         <activity android:name=".Search_01"/>
