--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,6 +55,10 @@
             android:name=".Home_04_Chatting"
             android:windowSoftInputMode="stateAlwaysHidden" />
 
+        <activity
+            android:name=".Home_04_Group_Chatting"
+            android:windowSoftInputMode="stateAlwaysHidden" />
+
         <activity android:name=".Home_05"/>
 
         <activity android:name=".Search_01"/>
