--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:16.0.5'
     implementation 'com.google.firebase:firebase-storage:16.0.5'
 
+    implementation 'com.google.firebase:firebase-messaging:17.3.1'
+
     implementation 'com.facebook.stetho:stetho:1.5.0'
     implementation 'com.facebook.stetho:stetho-okhttp3:1.5.0'
     implementation 'com.facebook.stetho:stetho-js-rhino:1.5.0'
@@ -49,3 +51,4 @@ dependencies {
 }
 
 apply plugin: 'com.google.gms.google-services'
+com.google.gms.googleservices.GoogleServicesPlugin.config.disableVersionCheck = true
