--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,8 @@ dependencies {
     implementation 'com.facebook.stetho:stetho-js-rhino:1.5.0'
 
     implementation 'com.github.bumptech.glide:glide:3.7.0'
+
+    testImplementation("com.squareup.okhttp3:mockwebserver:3.12.0")
 }
 
 apply plugin: 'com.google.gms.google-services'
