--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,11 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:3.7.0'
 
     testImplementation("com.squareup.okhttp3:mockwebserver:3.12.0")
+
+    dependencies {
+        implementation 'com.jakewharton:butterknife:9.0.0-rc2'
+        annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0-rc2'
+    }
 }
 
 apply plugin: 'com.google.gms.google-services'
