--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,8 @@
 
         <activity android:name=".Home_02_following"/>
 
+        <activity android:name=".Home_02_Others"/>
+
         <activity android:name=".Home_02_01"/>
 
         <activity android:name=".Home_02_02"/>
