--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,10 @@ dependencies {
         implementation 'com.jakewharton:butterknife:9.0.0-rc2'
         annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0-rc2'
     }
+
+    dependencies {
+        implementation 'com.github.ybq:Android-SpinKit:1.2.0'
+    }
 }
 
 apply plugin: 'com.google.gms.google-services'
