--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,8 @@ dependencies {
 
     testImplementation("com.squareup.okhttp3:mockwebserver:3.12.0")
 
+    implementation group: 'org.jsoup', name: 'jsoup', version: '1.9.1'
+
     dependencies {
         implementation 'com.jakewharton:butterknife:9.0.0-rc2'
         annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0-rc2'
