--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,8 @@ dependencies {
 
     implementation group: 'org.jsoup', name: 'jsoup', version: '1.9.1'
 
+    implementation 'com.airbnb.android:lottie:1.5.3'
+
     dependencies {
         implementation 'com.jakewharton:butterknife:9.0.0-rc2'
         annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0-rc2'
