--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,12 @@ dependencies {
     dependencies {
         implementation 'com.github.ybq:Android-SpinKit:1.2.0'
     }
+
+    dependencies {
+        implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
+        implementation 'com.android.support:appcompat-v7:25.3.1'   // Minimum 23+ is required
+    }
+
 }
 
 apply plugin: 'com.google.gms.google-services'
