--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,13 @@ dependencies {
         implementation 'com.android.support:appcompat-v7:25.3.1'   // Minimum 23+ is required
     }
 
+    implementation 'ai.api:libai:1.6.11'
+    implementation 'ai.api:sdk:2.0.5@aar'
+
+    implementation 'commons-io:commons-io:2.4'
+    implementation 'com.firebase:firebase-client-android:2.3.1'
+    implementation'com.firebaseui:firebase-ui-database:1.1.1'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
