--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -89,6 +89,13 @@
         <activity android:name=".Search_01"
             android:windowSoftInputMode="stateAlwaysHidden"/>
 
+        <activity android:name=".AnyOritationCaptureActivity"
+            android:screenOrientation="fullSensor"
+            android:stateNotNeeded="true"
+            android:theme="@style/zxing_CaptureTheme"
+            android:windowSoftInputMode="stateAlwaysHidden">
+        </activity>
+
         <activity android:name=".Search_02"/>
 
         <provider
