--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,26 +55,22 @@ dependencies {
 
     implementation 'com.airbnb.android:lottie:1.5.3'
 
-    dependencies {
-        implementation 'com.jakewharton:butterknife:9.0.0-rc2'
-        annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0-rc2'
-    }
+    implementation 'com.jakewharton:butterknife:9.0.0-rc2'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0-rc2'
 
-    dependencies {
-        implementation 'com.github.ybq:Android-SpinKit:1.2.0'
-    }
+    implementation 'com.github.ybq:Android-SpinKit:1.2.0'
 
-    dependencies {
-        implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
-        implementation 'com.android.support:appcompat-v7:25.3.1'   // Minimum 23+ is required
-    }
+    implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
+    implementation 'com.android.support:appcompat-v7:25.3.1'   // Minimum 23+ is required
 
     implementation 'ai.api:libai:1.6.11'
     implementation 'ai.api:sdk:2.0.5@aar'
 
     implementation 'commons-io:commons-io:2.4'
     implementation 'com.firebase:firebase-client-android:2.3.1'
-    implementation'com.firebaseui:firebase-ui-database:1.1.1'
+    implementation 'com.firebaseui:firebase-ui-database:1.1.1'
+
+    implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
 
 }
 
